--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "talerouter",
   "private": true,
   "version": "0.0.0",
-  "home page":"ttps://github.com/Raksi0515/Talerouter.git",
+  "home page": "ttps://github.com/Raksi0515/Talerouter.git",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2"
