--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "talerouter",
   "private": true,
   "version": "0.0.0",
-  "home page": "https://github.com/Raksi0515/Talerouter.git",
+  "homepage": "https://raksika.github.io/Talerouter",
+
   "type": "module",
   "scripts": {
     "dev": "vite",
