--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "talerouter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://raksika.github.io/Talerouter",
+  "homepage": "https://Raksi0515.github.io/Talerouter",
 
   "type": "module",
   "scripts": {
