--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "talerouter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Raksi0515.github.io/Talerouter",
-
+  "homepage": "https://Raksi0515.github.io/route",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,7 +13,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2"
@@ -27,6 +25,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
