--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build" : "vite build"
   },
   "dependencies": {
     "react": "^19.0.0",
